--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "IIOO",
   "main": "index.js",
   "scripts": {
+    "build": "npm run clean && tsc",
+    "clean": "rm -rf ./dist/*",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -20,10 +22,17 @@
   },
   "homepage": "https://github.com/wenjiasen/IIOO#readme",
   "devDependencies": {
+    "@types/node": "^12.7.5",
+    "@types/request": "^2.48.3",
+    "@types/request-promise": "^4.1.44",
     "prettier": "^1.18.2",
-    "ts-node": "^8.4.1",
+    "ts-node": "^6.2.0",
     "tslint": "^5.20.0",
     "tslint-config-airbnb": "^5.11.1",
     "typescript": "^3.6.3"
+  },
+  "dependencies": {
+    "request": "^2.88.0",
+    "request-promise": "^4.2.4"
   }
 }
