--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "iioo",
   "version": "0.1.0",
   "description": "IIOO",
-  "main": "index.js",
+  "main": "./dist/index.js",
   "scripts": {
     "build": "npm run clean && tsc",
     "clean": "rm -rf ./dist/*",
